// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with all data 1`] = `
<div
  className="project-card-leak-measures"
>
  <div
    className="project-card-measure"
    data-key="new_reliability_rating"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          className="spacer-right"
          metricKey="new_bugs"
          metricType="SHORT_INT"
          value="8"
        />
        <Rating
          value="1.0"
        />
      </div>
      <div
        className="project-card-measure-label-with-icon"
      >
        <BugIcon
          className="little-spacer-right text-bottom"
        />
        metric.bugs.name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure"
    data-key="new_security_rating"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          className="spacer-right"
          metricKey="new_vulnerabilities"
          metricType="SHORT_INT"
          value="2"
        />
        <Rating
          value="2.0"
        />
      </div>
      <div
        className="project-card-measure-label-with-icon"
      >
        <VulnerabilityIcon
          className="little-spacer-right text-bottom"
        />
        metric.vulnerabilities.name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure"
    data-key="new_maintainability_rating"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          className="spacer-right"
          metricKey="new_code_smells"
          metricType="SHORT_INT"
          value="0"
        />
        <Rating
          value="1.0"
        />
      </div>
      <div
        className="project-card-measure-label-with-icon"
      >
        <CodeSmellIcon
          className="little-spacer-right text-bottom"
        />
        metric.code_smells.name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure"
    data-key="new_coverage"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          metricKey="new_coverage"
          metricType="PERCENT"
          value="26.55"
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        metric.coverage.name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure"
    data-key="new_duplicated_lines_density"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          metricKey="new_duplicated_lines_density"
          metricType="PERCENT"
          value="0.55"
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        metric.duplicated_lines_density.short_name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure project-card-ncloc"
    data-key="new_lines"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          metricKey="new_lines"
          metricType="SHORT_INT"
          value="87"
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        metric.lines.name
      </div>
    </div>
  </div>
</div>
`;

exports[`should render no data style new coverage, new duplications and new lines 1`] = `
<div
  className="project-card-leak-measures"
>
  <div
    className="project-card-measure"
    data-key="new_reliability_rating"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          className="spacer-right"
          metricKey="new_bugs"
          metricType="SHORT_INT"
          value="8"
        />
        <Rating
          value="1.0"
        />
      </div>
      <div
        className="project-card-measure-label-with-icon"
      >
        <BugIcon
          className="little-spacer-right text-bottom"
        />
        metric.bugs.name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure"
    data-key="new_security_rating"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          className="spacer-right"
          metricKey="new_vulnerabilities"
          metricType="SHORT_INT"
          value="2"
        />
        <Rating
          value="2.0"
        />
      </div>
      <div
        className="project-card-measure-label-with-icon"
      >
        <VulnerabilityIcon
          className="little-spacer-right text-bottom"
        />
        metric.vulnerabilities.name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure"
    data-key="new_maintainability_rating"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          className="spacer-right"
          metricKey="new_code_smells"
          metricType="SHORT_INT"
          value="0"
        />
        <Rating
          value="1.0"
        />
      </div>
      <div
        className="project-card-measure-label-with-icon"
      >
        <CodeSmellIcon
          className="little-spacer-right text-bottom"
        />
        metric.code_smells.name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure"
    data-key="new_duplicated_lines_density"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          metricKey="new_duplicated_lines_density"
          metricType="PERCENT"
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        metric.duplicated_lines_density.short_name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure project-card-ncloc"
    data-key="new_lines"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          metricKey="new_lines"
          metricType="SHORT_INT"
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        metric.lines.name
      </div>
    </div>
  </div>
</div>
`;
